# rusty_snake

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
docs/: README.md  index.html  package.json  rusty_snake.d.ts  rusty_snake.js  rusty_snake_bg.wasm  rusty_snake_bg.wasm.d.ts
pkg/: package.json  rusty_snake.js  rusty_snake_bg.wasm  rusty_snake_bg.wasm.d.ts
src/: lib.rs
src/game/: game.rs  inner.rs  mod.rs
