[package]
name = "rusty_snake"
version = "0.1.0"
authors = ["Michael Adams <madams@gmail.com>"]
edition = "2018"
description = "Simple snake-like game"
repository = "https://github.com/loremdipso/rusty_snake"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.11"
wasm-logger = "0.2.0"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
tau = "1.0.4"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'console',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'KeyboardEvent',
  'Node',
  'Window',
]
